Update TWHCO files

--- a/sites/twhc/scss/_main.scss
+++ b/sites/twhc/scss/_main.scss
@@ -33,6 +33,7 @@
 'elements/hr',
 'elements/img',
 'elements/site',
+'elements/table',
 'elements/type-heading',
 'elements/type-list',
 'elements/type-misc',
@@ -49,12 +50,9 @@
 
 'modules/modules-grid',
 'modules/modules-helpers',
+'modules/modules-alert',
 'modules/modules-slick',
 'modules/modules-features',
-'modules/modules-resorts',
-'modules/modules-testimonials',
-'modules/modules-callback',
-'modules/modules-instagram',
 
 
 
@@ -69,4 +67,9 @@
 'layout/layout-contentinfo',
 'layout/layout-nav',
 'layout/layout-index',
-'layout/layout-masthead';
+'layout/layout-masthead',
+'layout/layout-resorts',
+'layout/layout-testimonials',
+'layout/layout-callback',
+'layout/layout-promo-bar',
+'layout/layout-instagram';
