--- a/sites/twhc/scss/layout/_layout-testimonials.scss
+++ b/sites/twhc/scss/layout/_layout-testimonials.scss
@@ -7,7 +7,7 @@
  * A form used to gather details so they can be called back at a suitable time.
  */
  
-.band--quotes {
+.band--testimonials {
 	
 	@include bp(bp5) {
 		padding-bottom: 0 !important;
