--- a/sites/twhc/scss/elements/_form-button.scss
+++ b/sites/twhc/scss/elements/_form-button.scss
@@ -16,7 +16,7 @@
 	background-image: url(../img/interface/noise.png), linear-gradient(rgba($grey-darker,0) 0%, $grey-darker 100%);
 	background-repeat: repeat;
 	background-size: auto;
-	border: 2px solid transparent;
+	border: none;
 	border-radius: $button-border-radius;
 	box-sizing: border-box;
 	color: $button-font-color;
@@ -40,6 +40,10 @@
 	text-transform: $button-font-transform;
 	transition: all .15s;
 	vertical-align: middle;
+	
+	@include bp(bp5) {
+		padding: 12px ($gutter * 1.5) 10px;
+	}
 
 	&:visited {
 		background-color: $button-bg;
@@ -55,6 +59,34 @@
 	
 	&:active {
 		top: 1px;
+	}
+}
+
+.btn--shadow {
+	
+	&:after {
+		background: url(../img/interface/btn-shadow.png) no-repeat right bottom;
+		background-size: 80% 100%;
+		bottom: -12px;
+		content: "";
+		display: block;
+		height: 12px;
+		position: absolute;
+		right: -2px;
+		transition: all .15s;	
+		width: 100%;
+	}
+
+	&:hover {
+		
+		&:before {
+			opacity: 0;
+		}
+		
+		&:after {
+			bottom: -4px;
+			height: 4px;
+		}
 	}
 }
 
