--- a/sites/twhc/scss/elements/_form-uniform.scss
+++ b/sites/twhc/scss/elements/_form-uniform.scss
@@ -45,7 +45,7 @@
 	//.control input:focus ~ &,
 	.control input:checked ~ & {
 		background: $color-primary;
-		border-color: darken($color-primary,10%);
+		border-color: $color-primary-dark;
 		box-shadow: none;
 	}
 	
@@ -67,7 +67,7 @@
 }
 
 .control--checkbox .control__input:after {
-	background: url(../assets/icon-check.svg) no-repeat center center;
+	background: url(../img/interface/icon-check.svg) no-repeat center center;
 	background-size: 100%;
 	height: 100%;
 	width: 100%;
@@ -76,10 +76,10 @@
 	background: $white;
 	border-radius: 100%;
 	box-shadow: 1px 1px rgba($black,.20);
-	height: 7px;
+	height: 5px;
 	top: 3px;
 	left: 3px;
-	width: 7px;
+	width: 5px;
 }
 
 
@@ -99,27 +99,26 @@
 		-webkit-appearance: none;
 		-moz-appearance: none;
 		appearance: none;
-		background: $white url(../assets/icon-select-arrows.svg) no-repeat right 10px center;
+		background: $white url(../img/interface/icon-select-arrows.svg) no-repeat right 10px center;
 		border: $border-width $border-style $input-border-color;
 		background-size: 12px;
 		border-radius: 0;
 		color: $font-color;
 		cursor: pointer;
 		display: inline-block;
-		font-family: $button-font-family;	
+		font-family: $font-family;	
 		@include font-size(10);
-		font-weight: $button-font-weight;
-		letter-spacing: $button-letter-spacing;
+		font-weight: 400;
 		line-height: $font-lineheight;
 		outline: 0;
 		overflow: hidden;
 		margin: 0;
-		padding: 10px $gutter 10px $gutter / 2;
+		padding: 6px $gutter 6px $gutter / 2;
 		-o-text-overflow: ellipsis;
 		text-overflow: ellipsis;
 		text-transform: capitalize;
 		-webkit-transition: all .20s;
-		transition: all .20s;
+		transition: all .15s;
 		white-space: nowrap;
 		width: 100%;
 		
