Updated TWHC files

--- a/sites/twhc/scss/_main.scss
+++ b/sites/twhc/scss/_main.scss
@@ -51,8 +51,10 @@
 'modules/modules-grid',
 'modules/modules-helpers',
 'modules/modules-alert',
+'modules/modules-box',
 'modules/modules-slick',
 'modules/modules-features',
+'modules/modules-accordion',
 
 
 
