--- a/sites/twhc/scss/modules/_modules-alert.scss
+++ b/sites/twhc/scss/modules/_modules-alert.scss
@@ -1,7 +1,6 @@
-/*------------------------------------*\
-  #ACCORDION
-\*------------------------------------*/
-
+/* ==========================================================================
+   #ALERTS
+   ========================================================================== */
 
 .alert {
 	background: $alert-bg url(../img/interface/noise.png) 0 0;
