--- a/sites/twhc/scss/modules/_modules-features.scss
+++ b/sites/twhc/scss/modules/_modules-features.scss
@@ -1,7 +1,7 @@
 
-/*------------------------------------*\
-    #FEATURES
-\*------------------------------------*/
+/* ==========================================================================
+   #FEATURES
+   ========================================================================== */
 
 /**
  * Features/service panel. Each item has an icon, title and short text entry.
