--- a/sites/twhc/scss/elements/_img.scss
+++ b/sites/twhc/scss/elements/_img.scss
@@ -84,31 +84,32 @@ figure {
 }
 
 figcaption {
-	color: $grey-darker;
+	color: $grey-light;
 	font-family: $figcaption-font-family;
-	font-size: $figcaption-font-size;
+	@include font-size(12);
 	font-style: $figcaption-font-style;
 	font-weight: $figcaption-font-weight;
+	line-height: 1.4;
 	margin-bottom: $vertical-spacing;
 	text-transform: $figcaption-text-transform;
 	
-	img + & {
-		margin-top: -$vertical-spacing / 2;
+	@include bp(bp5) {
+		@include font-size($font-size);
 	}
 	
-	.img-stroke + & {
-		padding: 0 8px;
+	img + & {
+		margin-top: -$vertical-spacing / 2;
 	}
 }
 
 
 	
 .pop {
-	margin-top: $vertical-spacing * 2;
+	margin: ($vertical-spacing * 1.5) 0;
 	transition: all .10s;
 	
 	@include bp(bp7) {
-		margin: ($vertical-spacing * 3) -100px ($vertical-spacing * 2);
+		margin: ($vertical-spacing * 2) -100px;
 
 		img,
 		video {
@@ -116,22 +117,11 @@ figcaption {
 		}
 		
 		figcaption {
-			margin: 0 100px $vertical-spacing;
+			margin: (-$vertical-spacing / 2) 100px $vertical-spacing;
 		}
 	}
 	
 	&:last-child {
 		margin-bottom: $vertical-spacing;
-	}
-}
-
-.pop--wide {
-	
-	@include bp(bp7) {
-		margin: ($vertical-spacing * 3) -150px ($vertical-spacing * 2);
-		
-		figcaption {
-			margin: 0 150px $vertical-spacing;
-		}
 	}
 }
