--- a/sites/twhc/scss/_main.scss
+++ b/sites/twhc/scss/_main.scss
@@ -70,7 +70,7 @@
 'layout/layout-nav',
 'layout/layout-index',
 'layout/layout-masthead',
-'layout/layout-resorts',
+'layout/layout-mosaic',
 'layout/layout-testimonials',
 'layout/layout-callback',
 'layout/layout-promo-bar',
