--- a/sites/twhc/scss/_main.scss
+++ b/sites/twhc/scss/_main.scss
@@ -74,4 +74,5 @@
 'layout/layout-testimonials',
 'layout/layout-callback',
 'layout/layout-promo-bar',
+'layout/layout-apply',
 'layout/layout-instagram';
