--- a/sites/twhc/scss/layout/_layout-nav.scss
+++ b/sites/twhc/scss/layout/_layout-nav.scss
@@ -47,6 +47,7 @@
 		top: auto;
 		left: auto;
 		transform: none;
+		transition: none;
 		z-index: 0;
 		width: auto;
 	}
@@ -76,6 +77,7 @@
 	width: 100%;
 	
 	@include bp(bp5) {
+		margin-right: -$gutter / 2; // Take into account padding on `a`.
 		position: relative;
 		top: auto;
 		left: auto;
@@ -91,6 +93,7 @@
 	margin: 0;
 	padding-left: 0;
 	opacity: 0;
+	position: relative;
 	text-transform: uppercase;
 	transform: translateY(-150px);
 	transition: all .40s .40s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -106,17 +109,21 @@
 	    display: inline-block;
 	    @include font-size(14);
 	    opacity: 1;
-	    margin-left: $gutter;
 	    transform: none;
+	    transition: none;
 	}
+	
+	&.current-menu-item {}
 }
 
 .site-nav__list a {
 	background-image: none;
 	color: $color-primary-lighter;
+	box-sizing: border-box;
 	display: block;
 	font-weight: 900;
 	padding: $vertical-spacing / 2;
+	transition: color .15s;
 	text-shadow: none;
 	
 	&:visited {
@@ -135,16 +142,16 @@
 	}
 
 	@include bp(bp5) {
-		color: $grey-dark;
-		padding: 0;
+		color: $grey-darker;
+		padding: $vertical-spacing $gutter / 2;
 		
 		&:visited {
-			color: $grey-dark;
+			color: $grey-darker;
 		}
 		
 		&:hover,
 		&:focus {
-			color: $grey-darker;
+			color: $color-primary;
 		}
 		
 		&.amp {
