--- a/sites/twhc/scss/elements/_a.scss
+++ b/sites/twhc/scss/elements/_a.scss
@@ -46,3 +46,42 @@ a {
 		outline: 0;
 	}
 }
+
+
+
+
+
+/* ==========================================================================
+   #ARROW LINKS
+   ========================================================================== */
+
+/**
+ * A simple link style that displays an arrow to the right of the text when the
+ * anchor is hovered over.
+ */
+ 
+.arrow-link {
+	position: relative;
+	
+	&:after {
+		color: $grey-darker;
+	    content: "\203a\00fe0e";
+	    @include font-size(18);
+	    line-height: 18px;
+	    font-family: $font-family;
+	    font-weight: 700;
+	    opacity: 0;
+	    position: absolute;
+	    top: 5px;
+	    right: $gutter / 4;
+	    transition: all .20s;
+	}
+	
+	&:hover {
+		
+		&:after {
+			opacity: 1;
+			right: -$gutter / 3;
+		}
+	}
+}
