--- a/sites/twhc/scss/layout/_layout-mosaic.scss
+++ b/sites/twhc/scss/layout/_layout-mosaic.scss
@@ -22,6 +22,8 @@
 
 .mosaic {
 	@include clearfix;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .mosaic__item {
@@ -54,6 +56,9 @@
 
 .tile {
 	background: $white;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
 	position: relative;
 	text-align: center;
 	transition: all .15s;
@@ -96,13 +101,34 @@
 }
 
 .tile__wrap {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+	align-items: center;
 	padding: $vertical-spacing $gutter 0;
+	
+	p {
+		margin-bottom: $vertical-spacing / 2;
+	}
+	
+	.btn {
+		margin-top: $vertical-spacing / 2;
+	}
+}
+
+.tile__footer {
+	margin-bottom: $vertical-spacing;
+	margin-top: auto;
 }
 
 .tile__subtitle {
 	color: $color-primary;
 	@include font-size(14);
 	margin-bottom: $vertical-spacing / 6;
+	
+	.dt-published {
+		color: $grey-light;
+	}
 	
 	@include bp(bp5) {
 		@include font-size(16);
@@ -116,6 +142,14 @@
 		font-weight: 900;
 		padding: 0;
 		text-shadow: none;
+	}
+	
+	&.p-name {
+		@include font-size(24);
+		
+		@include bp(bp5) {
+			@include font-size(30);
+		}
 	}
 }
 
