--- a/sites/twhc/scss/layout/_layout-nav.scss
+++ b/sites/twhc/scss/layout/_layout-nav.scss
@@ -35,13 +35,14 @@
 	visibility: hidden;
 	width: 100%;
 	z-index: -1;
-	
+
 	@include bp(bp5) {
 		background: none;
 		float: right;
 		height: auto;
 		opacity: 1;
-		user-select: all;
+		overflow: visible;
+		user-select: auto;
 		visibility: visible;
 		position: relative;
 		top: auto;
@@ -93,7 +94,6 @@
 	margin: 0;
 	padding-left: 0;
 	opacity: 0;
-	position: relative;
 	text-transform: uppercase;
 	transform: translateY(-150px);
 	transition: all .40s .40s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -114,6 +114,17 @@
 	}
 	
 	&.current-menu-item {}
+}
+
+.site-nav__line {
+	background: $color-primary;
+	content: "";
+	display: block;
+	height: 2px;
+	position: absolute;
+	top: -2px;
+	left: 0;
+	width: 100%;
 }
 
 .site-nav__list a {
@@ -168,3 +179,4 @@
 		}
 	}
 }
+
